added skills and honors to resume page

--- a/about.html
+++ b/about.html
@@ -373,21 +373,21 @@ div.tocify {
 </p>
 <div id="ms-in-biostatistics-statistical-genetics-track" class="section level4">
 <h4>MS in <strong>Biostatistics, Statistical Genetics Track</strong></h4>
-<p>Expected Spring 2023</p>
+<p><strong>Expected Spring 2023</strong></p>
 <p>Relevant Coursework: Biostatistical Methods I, Human Population Genetics, Data Science I</p>
 <p><img src="images/vassar.png" style="width:7%"> <img src="images/vassar_name.png" style="width:20%"><br />
 </p>
 </div>
 <div id="ba-in-biology-minor-in-computer-science" class="section level4">
 <h4>BA in <strong>Biology</strong>, Minor in <strong>Computer Science</strong></h4>
-<p>Fall 2020</p>
+<p><strong>Fall 2020</strong></p>
 <p>Relevant Coursework: Bioinformatics, Molecular Genetics, Software Design &amp; Implementation</p>
 <p><img src="images/yuan_pei.png" style="width:45%"><br />
 </p>
 </div>
 <div id="yuan-pei-scholar" class="section level4">
 <h4>Yuan Pei Scholar</h4>
-<p>Fall 2018</p>
+<p><strong>Fall 2018</strong></p>
 <p>Relevant Coursework: Statistical Genomics Analysis, Biochemical Pharmaceutics<br />
 <br />
 <br />
@@ -400,7 +400,7 @@ div.tocify {
 <p><img src="images/regeneron.png" style="width:35%"><br />
 </p>
 <div id="lab-assistant-protein-biochemistry-group" class="section level4">
-<h4>Lab Assistant Protein Biochemistry Group</h4>
+<h4>Lab Assistant, Protein Biochemistry Group</h4>
 <p>Mar 2021 – Jun 2021<br />
 • Piloted a new sample management workflow; imported 30,000+ protein tubes into the BioBank to support company-wide studies<br />
 • Used ELNs, LIMS, BioRegistry, and more to perform sample management in a timely and responsible manner<br />
@@ -433,7 +433,48 @@ div.tocify {
 <div id="research-assistant-dr.-m.c.-wus-bee-lab" class="section level4">
 <h4>Research Assistant, Dr. M.C. Wu’s Bee Lab</h4>
 <p>Feb 2019 – Jun 2019<br />
-• Increased the mrjp1 gene expression in A. mellifera to enhance the nutritional richness of royal jelly by 35%, a lab record</p>
+• Increased the mrjp1 gene expression in A. mellifera to enhance the nutritional richness of royal jelly by 35%, a lab record<br />
+<br />
+<br />
+<br />
+</p>
+</div>
+</div>
+<div id="skills" class="section level2">
+<h2><strong>SKILLS</strong></h2>
+<div id="computational" class="section level4">
+<h4>Computational</h4>
+<p><strong>R / Python / Unit testing / BLAST / SSH</strong></p>
+</div>
+<div id="wet-laboratory" class="section level4">
+<h4>Wet Laboratory</h4>
+<p><strong>CRISPR / Gene cloning / qPCR / SDS-PAGE / ELISA</strong></p>
+</div>
+<div id="spoken-language" class="section level4">
+<h4>Spoken Language</h4>
+<p><strong>Mandarin Chinese</strong><br />
+<br />
+<br />
+<br />
+</p>
+</div>
+</div>
+<div id="honors-awards" class="section level2">
+<h2><strong>HONORS &amp; AWARDS</strong></h2>
+<div id="section" class="section level4">
+<h4>2021</h4>
+<p><strong>The Dorothy Evans Fellowship</strong><br />
+<strong>The Virginia Swinburne Brownell Prize in Biology</strong><br />
+</p>
+</div>
+<div id="section-1" class="section level4">
+<h4>2019</h4>
+<p><strong>Vassar Internship Grant Fund</strong><br />
+</p>
+</div>
+<div id="section-2" class="section level4">
+<h4>2017</h4>
+<p><strong>Tri-State Collegiate Rugby Champion</strong></p>
 </div>
 </div>
 
