--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.11/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -369,7 +369,7 @@ div.tocify {
 
 <div id="education" class="section level2">
 <h2><strong>EDUCATION</strong></h2>
-<p><img src="images/columbia.jpg" style="width:30%"><br />
+<p><img src="images/columbia.png" style="width:30%"><br />
 </p>
 <div id="ms-in-biostatistics-statistical-genetics-track" class="section level4">
 <h4>MS in <strong>Biostatistics, Statistical Genetics Track</strong></h4>
