--- a/about.html
+++ b/about.html
@@ -322,6 +322,9 @@ div.tocify {
         <li>
   <a href="about.html">Resume</a>
 </li>
+<li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
